# judge-training-ground

./: .gitignore  README.md
backend/: .env.example  main.py  pyproject.toml
backend/app/: __init__.py  main.py  schemas.py
backend/app/routers/: api.py
backend/app/services/: generator.py  judge.py  llm.py  metrics.py  optimizer.py
backend/app/services/optimizer/: __init__.py  base.py  registry.py
backend/app/services/optimizer/dspy/: __init__.py  adapters.py  factory.py
backend/app/services/optimizer/opik/: __init__.py  adapters.py  factory.py
backend/tests/: conftest.py  test_api.py  test_integration.py  test_optimizer.py  test_schemas.py  test_services.py
frontend/: package-lock.json  package.json  vitest.config.ts
frontend/src/__tests__/: PromptEditor.test.tsx  api.test.ts  setup.ts  store.test.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/sidebar/: CreateDatasetDialog.tsx  CreateJudgeDialog.tsx  DatasetListItem.tsx  DatasetSidebar.tsx  JudgeListItem.tsx  JudgeSidebar.tsx
frontend/src/components/training-ground/: DataGrid.tsx  PromptEditor.tsx  PromptVersionsView.tsx  ResultsView.tsx  RunHistoryView.tsx  WelcomeView.tsx
frontend/src/lib/: api.ts  store.ts  types.ts
frontend/src/lib/persistence/: factory.ts  index.ts  localStorage.ts  migration.ts  types.ts
